--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@ Repository for my private ansible setup
 This project is during development
 
 ** To get started
-    1. Create a file called `inventory` that will contain the server ip or domain.
+    1. Create a file called ~inventory~ that will contain the server ip or domain.
       #+begin_example
         hamsterapps.net
         10.0.0.33
