--- a/README.org
+++ b/README.org
@@ -14,9 +14,43 @@ This project is during development
         172.16.250.134
       #+end_example
     2. Ping inventory
+       We will run ansible against all provided server within the inventory file.
+       We need to specify the ~ssh key~ and ~user~ otherwise it will login by the local computers user.
+       Then we specify ~ping~ to use as a method.
       #+BEGIN_SRC shell
         ansible all --key-file ~/.ssh/ansible -u root -i inventory -m ping
       #+END_SRC
+
+      #+RESULTS:
+      | hamsterapps.net               |                 |   | SUCCESS | => | { |
+      | ansible_facts                 | {               |   |         |    |   |
+      | discovered_interpreter_python | /usr/bin/python |   |         |    |   |
+      | },                            |                 |   |         |    |   |
+      | changed                       | false,          |   |         |    |   |
+      | ping                          | pong            |   |         |    |   |
+      | }                             |                 |   |         |    |   |
+      | 10.0.0.33                     |                 |   | SUCCESS | => | { |
+      | ansible_facts                 | {               |   |         |    |   |
+      | discovered_interpreter_python | /usr/bin/python |   |         |    |   |
+      | },                            |                 |   |         |    |   |
+      | changed                       | false,          |   |         |    |   |
+      | ping                          | pong            |   |         |    |   |
+      | }                             |                 |   |         |    |   |
+      | 172.16.250.134                |                 |   | SUCCESS | => | { |
+      | ansible_facts                 | {               |   |         |    |   |
+      | discovered_interpreter_python | /usr/bin/python |   |         |    |   |
+      | },                            |                 |   |         |    |   |
+      | changed                       | false,          |   |         |    |   |
+      | ping                          | pong            |   |         |    |   |
+      | }                             |                 |   |         |    |   |
+
+       a. Shorten command
+        Now when we created a ~ansible.cfg~ file.
+        We no longer need to specify all the paramters
+
+        #+BEGIN_SRC shell
+          ansible all -m ping
+        #+END_SRC
 
       #+RESULTS:
       | hamsterapps.net               |                 |   | SUCCESS | => | { |
